tests/invalid/unsatisfiable_constraint.err_exp
unsatisfiable_constraint.m:038: In predicate `test'/1:
unsatisfiable_constraint.m:038:   type error: unsatisfied typeclass constraints:
unsatisfiable_constraint.m:038:     `unsatisfiable_constraint.a(A, B, A, V_8)',
unsatisfiable_constraint.m:038:     `unsatisfiable_constraint.a(A, B, C, V_14)',
unsatisfiable_constraint.m:038:     `unsatisfiable_constraint.b(A, C)'
unsatisfiable_constraint.m:038: In predicate `test'/1:
unsatisfiable_constraint.m:038:   warning: unresolved polymorphism.
unsatisfiable_constraint.m:038:   The variables with unbound types were:
unsatisfiable_constraint.m:038:     C: C
unsatisfiable_constraint.m:038:     B: A
unsatisfiable_constraint.m:038:   The unbound type variables will be implicitly
unsatisfiable_constraint.m:038:   bound to the builtin type `void'.
unsatisfiable_constraint.m:038:   The body of the clause contains a call to a
unsatisfiable_constraint.m:038:   polymorphic predicate, but I can't determine
unsatisfiable_constraint.m:038:   which version should be called, because the
unsatisfiable_constraint.m:038:   type variables listed above didn't get bound.
unsatisfiable_constraint.m:038:   (I ought to tell you which call caused the
unsatisfiable_constraint.m:038:   problem, but I'm afraid you'll have to work
unsatisfiable_constraint.m:038:   it out yourself. My apologies.)
